[tool.poetry]
name = "cmmd_pytorch"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.44.2"
accelerate = "^0.34.2"
absl-py = "^2.1.0"
pillow = "^10.4.0"
tqdm = "^4.66.4"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
